[package]
name = "ite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.3", features = ["derive"] }
crossterm = "0.29"
ignore = "0.4.31"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
terminal-colorsaurus = "1.0.3"
toml = "1.1.3"
tui-treelistview = "0.2.2"

[dev-dependencies]
portable-pty = "0.9.0"
tempfile = "3.27.0"
